# DungeonLifeAgent

./: .gitignore  2.15.0  2.31.0  README.md  conversation_history.json  launch_gui_directly.py  pyproject.toml  run_agent.py  run_gui.py  test_improved_search.py  test_ollama_integration.py
Documentacion/: 00_README_Principal.md  01_Concepto_y_Vision.md  02_Arquitectura_Tecnica.md  03_Especificaciones_Funcionales.md  04_Modos_Operativos.md  05_Taxonomia_y_Nomenclatura.md  06_Instalacion_y_Configuracion.md  07_Guia_Usuario.md  08_Guia_Desarrollador.md  09_API_y_Interfaces.md  10_Seguridad_y_Permisos.md  11_Testing_y_Validacion.md  13_Troubleshooting.md  14_Roadmap_y_Evolucion.md  15_Apéndice_Estructura_Directorios_Entidades.md  16_Mejoras_y_Expansiones.md  17_Memoria_Colectiva_y_Conocimiento_Tacito.md  18_Sistema_Conflictos_y_Resolucion.md  19_Plan_Ejecucion_Proyecto.md  20_Simulacion_y_Analisis_Predictivo.md  20_Verificacion_Fase_2.md  21_Arquitectura_Tecnica_Mejoras_Criticas.md  22_Infraestructura_Modelos_y_Automatizacion.md  DLE_400_01_Manual_CRAFT.md  HITOS_PROYECTO_OPTIMIZACION.md  HITO_1_EMBEDDINGS_AVANZADOS.md  HITO_2_PIPELINE_HIBRIDO.md  INTEGRACION_OLLAMA_HITOS.md  Observaciones y Puntos de Reflexión.md  SEGUIMIENTO_PROGRESO_HITOS.md  memoria_colectiva.json
dungeon_life_agent/: __init__.py  advanced_embeddings.py  agent.py  banner.py  cli.py  config.py  datasets.py  embedding_gemma.py  gui.py  interactive.py  knowledge.py  llm.py  memory.py  metrics.py  mode_manager.py  tools.py  (+5 more)
dungeon_life_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+26 files in other folders)
