[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dungeon-life-agent"
version = "0.1.0"
description = "MVP funcional del Dungeon Life Agent (Willow)"
authors = [
    {name = "Dungeon Life Agent Team"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
willow = "dungeon_life_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dungeon_life_agent"]
